6 files modified, 8 added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,13 @@
-<hello name="{{ name }}"></hello>
-<p>
-  Start editing to see some magic happen :)
-</p>
+<!-- Add header -->
+<app-header></app-header>
+
+<br/>
+<br/>
+
+<main class="w3-container">
+  <h2>Hello There !</h2>
+</main>
+
+
+<!-- Add footer  -->
+<app-footer></app-footer>
