3 files modified, 1 added, 1 deleted

--- a/src/app/promotion/promotion.component.html
+++ b/src/app/promotion/promotion.component.html
@@ -1,8 +1,79 @@
 <article>
   <h1>Promotion</h1>
+
   <div class="w3-row-padding">
-  <div class="w3-col s4"><img src="img_lights.jpg"></div>
-  <div class="w3-col s4"><img src="img_nature.jpg"></div>
-  <div class="w3-col s4"><img src="img_snowtops.jpg"></div>
-</div>
+    <div class="w3-col s6 w3-card-4">
+      <img alt="image" src="../assets/images/45111.jpg" />
+      <div class="#">
+        <p>12.50 MZN</p>
+        <p>The Italian</p>
+      </div>
+    </div>
+
+    <div class="w3-col s6 w3-card-4">
+      <div>
+        <img alt="image" src="./assets/images/45111.jpg" />
+        <div class="#">
+          <p>12.50 MZN</p>
+          <p>The Italian</p>
+        </div>
+      </div>
+      <div>
+        <img alt="image" src="./assets/images/45111.jpg" />
+        <div class="#">
+          <p>12.50 MZN</p>
+          <p>The Italian</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <br />
+
+  <div class="w3-row-padding">
+    <div class="w3-col s6 w3-card-4">
+      <img alt="image" src="../assets/images/45111.jpg" />
+      <div class="#">
+        <p>12.50 MZN</p>
+        <p>The Italian</p>
+      </div>
+    </div>
+
+    <div class="w3-col s6 w3-card-4">
+      <img alt="image" src="./assets/images/45111.jpg" />
+      <div class="#">
+        <p>12.50 MZN</p>
+        <p>The Italian</p>
+      </div>
+    </div>
+  </div>
+
+  <br />
+
+  <div class="w3-row-padding">
+    <div class="w3-col s6 w3-card-4">
+      <div>
+        <img alt="image" src="./assets/images/45111.jpg" />
+        <div class="#">
+          <p>12.50 MZN</p>
+          <p>The Italian</p>
+        </div>
+      </div>
+      <div>
+        <img alt="image" src="./assets/images/45111.jpg" />
+        <div class="#">
+          <p>12.50 MZN</p>
+          <p>The Italian</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="w3-col s6 w3-card-4">
+      <img alt="image" src="../assets/images/45111.jpg" />
+      <div class="#">
+        <p>12.50 MZN</p>
+        <p>The Italian</p>
+      </div>
+    </div>
+  </div>
 </article>
