--- a/src/app/slideshow/slideshow.component.html
+++ b/src/app/slideshow/slideshow.component.html
@@ -1,4 +1,4 @@
-<div class="w3-content" style="max-width:400px">
+<div class="w3-content" >
   <div class="mySlides w3-container w3-red">
     <h1><b>Did You Know?</b></h1>
     <h1><i>We plan to sell trips to the moon in the 2020s</i></h1>
