4 files modified, 15 added, 14 deleted

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,26 @@
 <!-- Add header -->
 <app-header></app-header>
 
+<!-- <br/>
 <br/>
-<br/>
+<br/> -->
 
-<main class="w3-container">
+
+
+<main class="w3-container w3-padding-64">
   <h2>Hello There !</h2>
-  <app-slideshow></app-slideshow>
-  <app-promotion></app-promotion>
+  <!-- <img class="img-responsive" src="../assets/1038000.jpg"> -->
+  <img src="../../assets/img/1.jpg" alt="image">
+
+  <!-- <app-slideshow></app-slideshow> -->
+  <!-- <app-category></app-category> -->
+  <!-- <app-promotion></app-promotion> -->
+  
 </main>
 
+<!-- <br/>
 <br/>
-<br/>
-<br/>
+<br/> -->
 
 <!-- Add footer  -->
 <app-footer></app-footer>
