--- a/src/app/promotion/promotion.component.html
+++ b/src/app/promotion/promotion.component.html
@@ -1,26 +1,29 @@
 <article>
   <h1>Promotion</h1>
 
-  <div class="w3-row-padding">
-    <div class="w3-col s6 w3-card-4">
-      <img alt="image" src="../assets/images/45111.jpg" />
-      <div class="#">
-        <p>12.50 MZN</p>
-        <p>The Italian</p>
-      </div>
-    </div>
-
-    <div class="w3-col s6 w3-card-4">
-      <div>
-        <img alt="image" src="./assets/images/45111.jpg" />
-        <div class="#">
+  <div class="w3-row-padding w3-margin-top">
+    <div class="w3-col s6">
+      <div class="w3-card">
+        <img src="img_monterosso.jpg" class="w3-image" />
+        <div class="w3-container">
           <p>12.50 MZN</p>
           <p>The Italian</p>
         </div>
       </div>
-      <div>
-        <img alt="image" src="./assets/images/45111.jpg" />
-        <div class="#">
+    </div>
+
+    <div class="w3-col s6">
+      <div class="w3-card">
+        <img src="img_monterosso.jpg" class="w3-image" />
+        <div class="w3-container">
+          <p>12.50 MZN</p>
+          <p>The Italian</p>
+        </div>
+      </div>
+
+      <div class="w3-card">
+        <img src="img_monterosso.jpg" class="w3-image" />
+        <div class="w3-container">
           <p>12.50 MZN</p>
           <p>The Italian</p>
         </div>
@@ -28,51 +31,53 @@
     </div>
   </div>
 
-  <br />
-
-  <div class="w3-row-padding">
-    <div class="w3-col s6 w3-card-4">
-      <img alt="image" src="../assets/images/45111.jpg" />
-      <div class="#">
-        <p>12.50 MZN</p>
-        <p>The Italian</p>
+  <div class="w3-row-padding w3-margin-top">
+    <div class="w3-col s6">
+      <div class="w3-card">
+        <img src="img_monterosso.jpg" class="w3-image" />
+        <div class="w3-container">
+          <p>12.50 MZN</p>
+          <p>The Italian</p>
+        </div>
       </div>
     </div>
 
-    <div class="w3-col s6 w3-card-4">
-      <img alt="image" src="./assets/images/45111.jpg" />
-      <div class="#">
-        <p>12.50 MZN</p>
-        <p>The Italian</p>
+    <div class="w3-col s6">
+      <div class="w3-card">
+        <img src="img_monterosso.jpg" class="w3-image" />
+        <div class="w3-container">
+          <p>12.50 MZN</p>
+          <p>The Italian</p>
+        </div>
       </div>
     </div>
   </div>
 
-  <br />
-
-  <div class="w3-row-padding">
-    <div class="w3-col s6 w3-card-4">
-      <div>
-        <img alt="image" src="./assets/images/45111.jpg" />
-        <div class="#">
+  <div class="w3-row-padding w3-margin-top">
+    <div class="w3-col s6">
+      <div class="w3-card">
+        <img src="img_monterosso.jpg" class="w3-image" />
+        <div class="w3-container">
           <p>12.50 MZN</p>
           <p>The Italian</p>
         </div>
       </div>
-      <div>
-        <img alt="image" src="./assets/images/45111.jpg" />
-        <div class="#">
+
+      <div class="w3-card">
+        <img src="img_monterosso.jpg" class="w3-image" />
+        <div class="w3-container">
           <p>12.50 MZN</p>
           <p>The Italian</p>
         </div>
       </div>
     </div>
-
-    <div class="w3-col s6 w3-card-4">
-      <img alt="image" src="../assets/images/45111.jpg" />
-      <div class="#">
-        <p>12.50 MZN</p>
-        <p>The Italian</p>
+    <div class="w3-col s6">
+      <div class="w3-card">
+        <img src="img_monterosso.jpg" class="w3-image" />
+        <div class="w3-container">
+          <p>12.50 MZN</p>
+          <p>The Italian</p>
+        </div>
       </div>
     </div>
   </div>
