--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,8 @@
 <main class="w3-container w3-padding-64">
   <h2>Hello There !</h2>
   <!-- <img class="img-responsive" src="../assets/1038000.jpg"> -->
-  <img src="../../assets/img/1.jpg" alt="image">
+  <!-- <img src="../../assets/img/1.jpg" alt="image"> -->
+  <img src="../assets/images/1.jpg"  />
 
   <!-- <app-slideshow></app-slideshow> -->
   <!-- <app-category></app-category> -->
