--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -49,5 +49,20 @@
 </div>
 </div>
 
+<div class="w3-row-padding w3-margin-top">
+<div class="w3-col s6">
+  <div class="w3-card w3-display-container">
+    <img src="img_monterosso.jpg" class="w3-image" />
+    <div class="w3-display-middle w3-large">Food</div>
+  </div>
+</div>
+
+<div class="w3-col s6">
+  <div class="w3-card w3-display-container">
+    <img src="img_monterosso.jpg" class="w3-image" />
+    <div class="w3-display-middle w3-large">Services</div>
+  </div>
+</div>
+</div>
   
 </article>
