--- a/src/app/promotion/promotion.component.html
+++ b/src/app/promotion/promotion.component.html
@@ -77,6 +77,9 @@
         <div class="w3-container">
           <p>12.50 MZN</p>
           <p>The Italian</p>
+          <p>12.50 MZN</p>
+          <p>The Italian</p>
+          
         </div>
       </div>
     </div>
